added the a tag

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -12,7 +12,7 @@
     <h2>Current Goal</h2>
     <p>My current goal is to master frontend frameworks and backend development.</p>
     <h3>Contact Me</h3>
-    <p>Send me a mail at: munzenzimercy9@gmail.com</p>
+    <p>Send me a mail at: <a href="munzenzimercy9@gmail.com">munzenzimercy9@gmail.com</a></p>
     <p>Always Learning</p>
 </body>
 </html>
