--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mercy Munzenzi - Personal Portfolio</title>
+    <title>Personal Portfolio</title>
 </head>
 <body>
     <header>
         <h1>Mercy Munzenzi</h1>
-        <nav>
+        <p>writing code one at a time</p>
+    </header>
+    <nav>
             <ul>
                 <li><a href="#introduction">Introduction</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-        </nav>
-    </header>
+    </nav>
     <main>
         <section id="introduction">
                 <h2>Introduction</h2>
