modified for pages consistency

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my portfolio</title>
+    <meta charset="utf-8">
+    <title>Personal Portfolio</title>
 </head>
 <body>
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" width ="40px", height="30px">
-    <h1>About Me</h1>
-    <p>I am an aspiring full stack developer with interest in AI, Data Science and building scalable systems</p>
-    <h2>Current Goal</h2>
-    <p>My current goal is to master frontend frameworks and backend development.</p>
-    <h3>Contact Me</h3>
-    <p>Send me a mail at: <a href="munzenzimercy9@gmail.com">munzenzimercy9@gmail.com</a></p>
-    <p>Always Learning</p>
+
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
+
+  <main>
+    <article>
+      <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" width="40px" height="30px">
+      <h1>About Me</h1>
+      <p>I am an aspiring full stack developer with interest in AI, Data Science and building scalable systems</p>
+      <h2>Current Goal</h2>
+      <p>My current goal is to master frontend frameworks and backend development.</p>
+      <h3>Contact Me</h3>
+      <p>Send me a mail at: <a href="mailto:munzenzimercy9@gmail.com">munzenzimercy9@gmail.com</a></p>
+      <p>Always Learning</p>
+    </article>
+    
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Mercy Munzenzi - <a href="https://www.linkedin.com/in/mercy-munzenzi-183056362/" target="_blank">here</a>.</p>
+  </footer>
+
 </body>
 </html>
