--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -23,6 +23,39 @@
       <h3>Contact Me</h3>
       <p>Send me a mail at: <a href="mailto:munzenzimercy9@gmail.com">munzenzimercy9@gmail.com</a></p>
       <p>Always Learning</p>
+
+      <!-- Learners Table -->
+                <table border="1">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Age</th>
+                            <th>Country</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>John</td>
+                            <td>25</td>
+                            <td>USA</td>
+                        </tr>
+                        <tr>
+                            <td>Emily</td>
+                            <td>28</td>
+                            <td>Canada</td>
+                        </tr>
+                        <tr>
+                            <td>Michael</td>
+                            <td>32</td>
+                            <td>Australia</td>
+                        </tr>
+                        <tr>
+                            <td>Sophia</td>
+                            <td>21</td>
+                            <td>UK</td>
+                        </tr>
+                    </tbody>
+                </table>
     </article>
     
     <aside>
